Fix line spacing when chords are hidden

--- a/src/components/SongDetail/SongDetail.module.css
+++ b/src/components/SongDetail/SongDetail.module.css
@@ -134,6 +134,10 @@
   margin-bottom: 0.5rem;
 }
 
+.linePair:only-child {
+  margin-bottom: 0.2rem;
+}
+
 .chordLine {
   position: absolute;
   top: -1.2em;
@@ -146,6 +150,11 @@
 .textLine {
   white-space: pre;
   position: relative;
+}
+
+/* Style dla ukrytych akordów - mniejsze odstępy */
+.linePair.chordsHidden {
+  margin-bottom: 0.2rem;
 }
 
 .line {
